Fixed controls-cast-overlay-fade-slow.html

Fixes the code checking whether we should show the overlay cast button
as well as the time when the controls are auto-hiding after playback
started.

Bug: 730723,730838
Change-Id: I988c07a880d05c67090ccda8665b0b54acbfa2b1
Reviewed-on: https://chromium-review.googlesource.com/527574
Commit-Queue: Anton Vayvod <avayvod@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478195}
Former-commit-id: e8a72f003a04193cdacbeac76d9c5cb86e15072e